# escape-hatch

./: .gitignore  CMakeLists.txt  Escape-hatch.sln  Escape-hatch.vcxproj  Escape-hatch.vcxproj.filters  GameManager.cpp  GameManager.h  InventoryInterface.cpp  InventoryInterface.h  Makefile  NavigationInterface.cpp  Stage.h
Escape-hatch/: Escape-hatch.sln
Escape-hatch/Escape-hatch/: Escape-hatch.vcxproj
src/: GameManager.cpp  InputHandler.cpp  InventoryInterface.cpp  Item.cpp  NavigationInterface.cpp  Stage.cpp  UiManager.cpp  main.cpp
src/inc/: .GameManager.h.swp  GameManager.h  InputHandler.h  InventoryInterface.h  Item.h  NavigationInterface.h  Stage.h  Types.h  UiManager.h
